tools/sddl/assembler/tests/success/stack_swap_double.asm
# Test: stack.swap - swap twice returns to original order
push.u32 1
push.u32 2
stack.swap
stack.swap
halt
