tools/sddl/assembler/tests/fail/stack_swap_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.u32 1
push.u32 2
stack.swap 1
halt
